=head1 NAME

Changes - Apache mod_perl change logfile

=head1 CHANGES

=over 3

=item 1.16_02-dev

remove references to the deprecated CGI::Switch

initialize %LocationMatch, %DirectoryMatch, %FilesMatch and tie to IxHash
for <Perl> sections [Eric Cholet <cholet@logilune.com>]

when <Perl> sections empty a symbol table, don't clear imported/aliased
variables (e.g. %Config::Config)

remove warning if Apache::Table was not already loaded

sv2request_rec (Apache typemap) will look for '~' so xs modules can
subclass without using a HASH ref (e.g. Apache::Request NG)

<Perl> sections will always make sure Apache.pm is loaded

=item 1.16_01 - November 24, 1998

$r->connection->remote_addr can now be changed

upgrade perl_PL.h to work with Perl 5.005_53+

use absolute path for StrongholdLicenseFile
[Todd R. Eigenschink <todd@tekinteractive.com>]

only perl_section_self_boot() if an %Apache::ReadConfig:: entry is defined()
this fixes a bug spotted by Eric Cholet where a startup file
subroutine that accessed %Apache::ReadConfig:: would trigger a
self-boot wipe-out

add Perl/$] to Server: header if $Apache::Server::AddPerlVersion is true

fixed refcnt bug in $r->current_callback

some Apache::Constants updates (see the .pod) and new export() method

ensure @INC value from startup time is always properly saved

pod support '=for apache/=end apache' replaced with:
 =over to apache
 #directives for apache
 =back to pod

Apache::FakeRequest now supports Apache::Constants and is documented
[Andrew Ford <A.Ford@ford-mason.co.uk>]

new Apache->define method works like IfDefine 

PerlRequire/PerlModule will start Perl if it is not already running

(undocumented) $Apache::ReadConfig variable renamed $Apache::Server::SaveConfig

SERVER_CREATE/SERVER_MERGE methods implemented for directive handlers

new-ish xs modules added to win32 build: Apache::Log, Apache::File,
Apache::Table, Apache::URI, Apache::Util
 
new Apache::Table->new method

two experimental options now on by default: 