@@ -8,6 +8,9 @@ Changes - Apache mod_perl change logfile
 
 =item 1.16_02-dev
 
+fix bug w/ push_handlers(PerlCleanupHandler => ...) spotted by 
+Jan-Pieter Cornet and Philp Gwyn
+
 remove references to the deprecated CGI::Switch
 
 initialize %LocationMatch, %DirectoryMatch, %FilesMatch and tie to IxHash
